labs/traffic-route/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: headers
spec:
  host: headers
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
