labs/traffic-route/virtual-service-with-header-subsets.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: headers-vs
spec:
  hosts:
    - "*"
  gateways:
    - headers-gateway
  http:
    - match:
        - uri:
            prefix: /headers
          headers:
            end-user:
              exact: redhatter
      route:
        - destination:
            host: headers
            subset: v2
    - match:
        - uri:
            prefix: /headers
      route:
        - destination:
            host: headers
            subset: v1
